--- a/docs/professor/alvaro_jose_de_almeida_araujo.mdx
+++ b/docs/professor/alvaro_jose_de_almeida_araujo.mdx
@@ -8,7 +8,7 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Projeto Integrador III",
+          subject: "Sistemas Gerenciadores de Conteúdo WEB",
           size: 1,
           teachers: [
             "Álvaro José de Almeida Araújo"
@@ -91,7 +91,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Projeto Integrador III",
+          subject: "Sistemas Gerenciadores de Conteúdo WEB",
           size: 1,
           teachers: [
             "Álvaro José de Almeida Araújo"
@@ -107,7 +107,21 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Sistemas Gerenciadores de Conteúdo WEB",
+          size: 2,
+          teachers: [
+            "Álvaro José de Almeida Araújo"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "IIW2023A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
