--- a/docs/professor/celina_de_oliveira_barbosa_gomes.mdx
+++ b/docs/professor/celina_de_oliveira_barbosa_gomes.mdx
@@ -11,8 +11,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Pedro Leites Junior"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -25,8 +24,7 @@ export const data = {
           subject: "Língua Estrangeira: Inglês",
           size: 1,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Yohana Diel Saheli"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -39,8 +37,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Kátia Cristiane Kobus Novaes"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 14-2",
           students: [
@@ -58,8 +55,7 @@ export const data = {
           subject: "Língua Estrangeira: Inglês",
           size: 1,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Yohana Diel Saheli"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -72,8 +68,7 @@ export const data = {
           subject: "Lingua Estrangeira Moderna 3 - Inglês",
           size: 1,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Yohana Diel Saheli"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 1-4",
           students: [
@@ -86,8 +81,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura III",
           size: 2,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Michelli Cristina Galli"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 3-1",
           students: [
@@ -105,8 +99,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Kátia Cristiane Kobus Novaes"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 14-2",
           students: [
@@ -119,8 +112,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Pedro Leites Junior"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 7-2",
           students: [
