--- a/docs/professor/humberto_fioravante_ferro.mdx
+++ b/docs/professor/humberto_fioravante_ferro.mdx
@@ -57,19 +57,6 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Sistemas Gerenciadores de Conteúdo WEB",
-          size: 2,
-          teachers: [
-            "Humberto Fioravante Ferro"
-          ],
-          classroom: "Sala 5",
-          students: [
-            "IIW2023A"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
           subject: "Projeto integrador I",
           size: 1,
           teachers: [
@@ -119,7 +106,7 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Sistemas Gerenciadores de Conteúdo WEB",
+          subject: "Projeto Integrador III",
           size: 2,
           teachers: [
             "Humberto Fioravante Ferro"
