--- a/docs/professor/kleber_augusto_michalichem.mdx
+++ b/docs/professor/kleber_augusto_michalichem.mdx
@@ -107,50 +107,7 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Educação Física III",
-          size: 2,
-          teachers: [
-            "Kleber Augusto Michalichem",
-            "Tiago Amaral Silva"
-          ],
-          classroom: "Educação Física / Sala 1 B2",
-          students: [
-            "AGO2023"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Educação Física I",
-          size: 1,
-          teachers: [
-            "Kleber Augusto Michalichem",
-            "Tiago Amaral Silva"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "COM2025"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
-          subject: "Educação Física II",
-          size: 2,
-          teachers: [
-            "Kleber Augusto Michalichem",
-            "Tiago Amaral Silva"
-          ],
-          classroom: "Educação Física / Sala 1 B2",
-          students: [
-            "AGO2024"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -158,50 +115,7 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Educação Física II",
-          size: 2,
-          teachers: [
-            "Kleber Augusto Michalichem",
-            "Tiago Amaral Silva"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "COM2024"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Educação Física I",
-          size: 2,
-          teachers: [
-            "Kleber Augusto Michalichem",
-            "Tiago Amaral Silva"
-          ],
-          classroom: "Educação Física / Sala 1 B2",
-          students: [
-            "AGO2025"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
-          subject: "Educação Física I",
-          size: 1,
-          teachers: [
-            "Kleber Augusto Michalichem",
-            "Tiago Amaral Silva"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "COM2025"
-          ],
-          time: "11:05 - 11:55",
-          color: ""
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
