--- a/docs/professor/tiago_amaral_silva.mdx
+++ b/docs/professor/tiago_amaral_silva.mdx
@@ -17,7 +17,7 @@ export const data = {
           teachers: [
             "Tiago Amaral Silva"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Laboratório de Informatica B",
           students: [
             "COM2023"
           ],
@@ -33,7 +33,6 @@ export const data = {
           subject: "Educação Física III",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem",
             "Tiago Amaral Silva"
           ],
           classroom: "Educação Física / Sala 1 B2",
@@ -47,7 +46,6 @@ export const data = {
           subject: "Educação Física I",
           size: 1,
           teachers: [
-            "Kleber Augusto Michalichem",
             "Tiago Amaral Silva"
           ],
           classroom: "Sala 7-2",
@@ -61,7 +59,6 @@ export const data = {
           subject: "Educação Física II",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem",
             "Tiago Amaral Silva"
           ],
           classroom: "Educação Física / Sala 1 B2",
@@ -82,7 +79,7 @@ export const data = {
           teachers: [
             "Tiago Amaral Silva"
           ],
-          classroom: "Sala 7-2",
+          classroom: "Laboratório de Informatica C",
           students: [
             "COM2025"
           ],
@@ -98,7 +95,6 @@ export const data = {
           subject: "Educação Física II",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem",
             "Tiago Amaral Silva"
           ],
           classroom: "Sala 14-2",
@@ -112,7 +108,6 @@ export const data = {
           subject: "Educação Física I",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem",
             "Tiago Amaral Silva"
           ],
           classroom: "Educação Física / Sala 1 B2",
@@ -126,7 +121,6 @@ export const data = {
           subject: "Educação Física I",
           size: 1,
           teachers: [
-            "Kleber Augusto Michalichem",
             "Tiago Amaral Silva"
           ],
           classroom: "Sala 7-2",
@@ -142,7 +136,7 @@ export const data = {
           teachers: [
             "Tiago Amaral Silva"
           ],
-          classroom: "Sala 14-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "COM2024"
           ],
