--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -120,21 +120,7 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Matemática III",
-          size: 2,
-          teachers: [
-            "Elenice Josefa Kolancko Setti"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "AGO2023"
-          ],
-          time: "13:10 - 14:00",
-          color: ""
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
