--- a/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
@@ -68,6 +68,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Projeto Integrador III",
+          size: 1,
+          teachers: [
+            "Tiago Amaral Silva"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "COM2023"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        },
+        {
           subject: "Gestão, Educação e Matemática Financeira",
           size: 2,
           teachers: [
@@ -126,14 +139,28 @@ export const data = {
           students: [
             "TGC2025"
           ],
-          time: "21:00 - 21:50",
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Projeto Integrador II",
+          size: 1,
+          teachers: [
+            "Tiago Amaral Silva"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "COM2024"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
