--- a/docs/sala/bloco_1/sala_3-1.mdx
+++ b/docs/sala/bloco_1/sala_3-1.mdx
@@ -123,27 +123,13 @@ export const data = {
           subject: "Língua Portuguesa e Literatura III",
           size: 2,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Michelli Cristina Galli"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 3-1",
           students: [
             "COM2023"
           ],
           time: "10:15 - 11:05",
-          color: ""
-        },
-        {
-          subject: "Projeto Integrador III",
-          size: 1,
-          teachers: [
-            "Tiago Amaral Silva"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "COM2023"
-          ],
-          time: "13:10 - 14:00",
           color: ""
         },
         {
@@ -270,7 +256,7 @@ export const data = {
           students: [
             "TGC2025"
           ],
-          time: "19:00 - 19:50",
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
