--- a/docs/sala/bloco_2/laboratorio_de_informatica_c.mdx
+++ b/docs/sala/bloco_2/laboratorio_de_informatica_c.mdx
@@ -141,6 +141,19 @@ export const data = {
           ],
           time: "08:20 - 09:10",
           color: ""
+        },
+        {
+          subject: "Projeto Integrador I",
+          size: 2,
+          teachers: [
+            "Tiago Amaral Silva"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: [
+            "COM2025"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
         }
       ]
     },
