--- a/docs/sala/bloco_2/sala_12-2.mdx
+++ b/docs/sala/bloco_2/sala_12-2.mdx
@@ -252,6 +252,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Matemática III",
+          size: 2,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        },
+        {
           subject: "Língua Portuguesa III",
           size: 1,
           teachers: [
