--- a/docs/sala/bloco_2/sala_15-2.mdx
+++ b/docs/sala/bloco_2/sala_15-2.mdx
@@ -125,6 +125,19 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Biologia 2",
+          size: 1,
+          teachers: [
+            "Eliana Peliçon Pereira Figueira"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "EIN2024"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Geografia 2",
           size: 1,
           teachers: [
