--- a/docs/sala/bloco_2/sala_7-2.mdx
+++ b/docs/sala/bloco_2/sala_7-2.mdx
@@ -14,8 +14,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Pedro Leites Junior"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -28,8 +27,7 @@ export const data = {
           subject: "Língua Estrangeira: Inglês",
           size: 1,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Yohana Diel Saheli"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -73,8 +71,7 @@ export const data = {
           subject: "Língua Estrangeira: Inglês",
           size: 1,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Yohana Diel Saheli"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -170,7 +167,6 @@ export const data = {
           subject: "Educação Física I",
           size: 1,
           teachers: [
-            "Kleber Augusto Michalichem",
             "Tiago Amaral Silva"
           ],
           classroom: "Sala 7-2",
@@ -184,8 +180,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Pedro Leites Junior"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -252,19 +247,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Projeto Integrador I",
-          size: 2,
-          teachers: [
-            "Tiago Amaral Silva"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "COM2025"
-          ],
-          time: "13:10 - 14:00",
-          color: ""
-        },
-        {
           subject: "Gênese, Morfologia e Classificação dos Solos",
           size: 4,
           teachers: [
@@ -312,7 +294,6 @@ export const data = {
           subject: "Educação Física I",
           size: 1,
           teachers: [
-            "Kleber Augusto Michalichem",
             "Tiago Amaral Silva"
           ],
           classroom: "Sala 7-2",
