--- a/docs/sala/bloco_2/sala_8-2.mdx
+++ b/docs/sala/bloco_2/sala_8-2.mdx
@@ -255,8 +255,7 @@ export const data = {
           subject: "Matemática I",
           size: 2,
           teachers: [
-            "Elenice Josefa Kolancko Setti",
-            "Elizangela Mendes Pereira"
+            "Elenice Josefa Kolancko Setti"
           ],
           classroom: "Sala 8-2",
           students: [
