--- a/docs/sala/bloco_2/sala_9-2.mdx
+++ b/docs/sala/bloco_2/sala_9-2.mdx
@@ -11,6 +11,19 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2025A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "História I",
           size: 1,
           teachers: [
@@ -45,7 +58,7 @@ export const data = {
           subject: "Matemática I",
           size: 2,
           teachers: [
-            "Jonathan Prass Souza"
+            "Elenice Josefa Kolancko Setti"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -97,21 +110,7 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Língua Portuguesa e Literatura I",
-          size: 2,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "IIW2025A"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -177,7 +176,7 @@ export const data = {
           subject: "Matemática I",
           size: 2,
           teachers: [
-            "Jonathan Prass Souza"
+            "Elenice Josefa Kolancko Setti"
           ],
           classroom: "Sala 9-2",
           students: [
