--- a/docs/sala/bloco_4/sala_1-4.mdx
+++ b/docs/sala/bloco_4/sala_1-4.mdx
@@ -84,8 +84,7 @@ export const data = {
           subject: "Lingua Estrangeira Moderna 3 - Inglês",
           size: 1,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Yohana Diel Saheli"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 1-4",
           students: [
