--- a/docs/turma/ago/ago2023.mdx
+++ b/docs/turma/ago/ago2023.mdx
@@ -154,7 +154,6 @@ export const data = {
           subject: "Educação Física III",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem",
             "Tiago Amaral Silva"
           ],
           classroom: "Educação Física / Sala 1 B2",
@@ -271,7 +270,7 @@ export const data = {
           teachers: [
             "Elenice Josefa Kolancko Setti"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Sala 12-2",
           students: [
             "AGO2023"
           ],
