--- a/docs/turma/ago/ago2025.mdx
+++ b/docs/turma/ago/ago2025.mdx
@@ -40,7 +40,7 @@ export const data = {
           subject: "Biologia I",
           size: 2,
           teachers: [
-            "Leandro Luiz Borges"
+            "Eliana Peliçon Pereira Figueira"
           ],
           classroom: "Laboratório de Biologia",
           students: [
@@ -281,7 +281,6 @@ export const data = {
           subject: "Educação Física I",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem",
             "Tiago Amaral Silva"
           ],
           classroom: "Educação Física / Sala 1 B2",
@@ -321,8 +320,7 @@ export const data = {
           subject: "Matemática I",
           size: 2,
           teachers: [
-            "Elenice Josefa Kolancko Setti",
-            "Elizangela Mendes Pereira"
+            "Elenice Josefa Kolancko Setti"
           ],
           classroom: "Sala 8-2",
           students: [
