--- a/docs/turma/com/com2023.mdx
+++ b/docs/turma/com/com2023.mdx
@@ -110,8 +110,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura III",
           size: 2,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Michelli Cristina Galli"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 3-1",
           students: [
@@ -126,7 +125,7 @@ export const data = {
           teachers: [
             "Tiago Amaral Silva"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Laboratório de Informatica B",
           students: [
             "COM2023"
           ],
