--- a/docs/turma/com/com2024.mdx
+++ b/docs/turma/com/com2024.mdx
@@ -40,8 +40,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Kátia Cristiane Kobus Novaes"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 14-2",
           students: [
@@ -142,8 +141,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Kátia Cristiane Kobus Novaes"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 14-2",
           students: [
@@ -218,7 +216,6 @@ export const data = {
           subject: "Educação Física II",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem",
             "Tiago Amaral Silva"
           ],
           classroom: "Sala 14-2",
@@ -260,7 +257,7 @@ export const data = {
           teachers: [
             "Tiago Amaral Silva"
           ],
-          classroom: "Sala 14-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "COM2024"
           ],
