--- a/docs/turma/ein/ein2024.mdx
+++ b/docs/turma/ein/ein2024.mdx
@@ -115,9 +115,9 @@ export const data = {
           subject: "Biologia 2",
           size: 1,
           teachers: [
-            "Leandro Luiz Borges"
+            "Eliana Peliçon Pereira Figueira"
           ],
-          classroom: "Laboratório de Biologia",
+          classroom: "Sala 15-2",
           students: [
             "EIN2024"
           ],
