--- a/docs/turma/iiw/iiw2023a.mdx
+++ b/docs/turma/iiw/iiw2023a.mdx
@@ -141,7 +141,7 @@ export const data = {
           subject: "Sistemas Gerenciadores de Conteúdo WEB",
           size: 2,
           teachers: [
-            "Humberto Fioravante Ferro"
+            "Álvaro José de Almeida Araújo"
           ],
           classroom: "Sala 5",
           students: [
@@ -211,7 +211,7 @@ export const data = {
           subject: "Matemática III",
           size: 2,
           teachers: [
-            "Jonathan Prass Souza"
+            "Elenice Josefa Kolancko Setti"
           ],
           classroom: "Sala 5",
           students: [
