--- a/docs/professor/elenice_josefa_kolancko_setti.mdx
+++ b/docs/professor/elenice_josefa_kolancko_setti.mdx
@@ -12,11 +12,23 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Matemática I",
+          size: 2,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2025A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Matemática II",
           size: 2,
           teachers: [
-            "Elenice Josefa Kolancko Setti",
-            "Elizangela Mendes Pereira"
+            "Elenice Josefa Kolancko Setti"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -33,10 +45,6 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Matemática III",
@@ -44,7 +52,38 @@ export const data = {
           teachers: [
             "Elenice Josefa Kolancko Setti"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Sala 5",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Matemática I",
+          size: 2,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2025A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Matemática III",
+          size: 2,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 12-2",
           students: [
             "AGO2023"
           ],
@@ -55,8 +94,7 @@ export const data = {
           subject: "Matemática I",
           size: 2,
           teachers: [
-            "Elenice Josefa Kolancko Setti",
-            "Elizangela Mendes Pereira"
+            "Elenice Josefa Kolancko Setti"
           ],
           classroom: "Sala 8-2",
           students: [
