--- a/docs/professor/eliana_pelicon_pereira_figueira.mdx
+++ b/docs/professor/eliana_pelicon_pereira_figueira.mdx
@@ -6,7 +6,21 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Biologia I",
+          size: 2,
+          teachers: [
+            "Eliana Peliçon Pereira Figueira"
+          ],
+          classroom: "Laboratório de Biologia",
+          students: [
+            "AGO2025"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
@@ -14,7 +28,21 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Biologia 2",
+          size: 1,
+          teachers: [
+            "Eliana Peliçon Pereira Figueira"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "EIN2024"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
