--- a/docs/professor/sergio_ricardo_ferrazoli.mdx
+++ b/docs/professor/sergio_ricardo_ferrazoli.mdx
@@ -66,7 +66,7 @@ export const data = {
           teachers: [
             "Sergio Ricardo Ferrazoli"
           ],
-          classroom: "Laboratório de Informatica C - CR Toledo",
+          classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
             "IIW2024B"
           ],
