--- a/docs/professor/yohana_diel_saheli.mdx
+++ b/docs/professor/yohana_diel_saheli.mdx
@@ -21,20 +21,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua Estrangeira: Inglês",
-          size: 1,
-          teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Yohana Diel Saheli"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "COM2025"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
@@ -51,36 +37,7 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Língua Estrangeira: Inglês",
-          size: 1,
-          teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Yohana Diel Saheli"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "COM2025"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Lingua Estrangeira Moderna 3 - Inglês",
-          size: 1,
-          teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Yohana Diel Saheli"
-          ],
-          classroom: "Sala 1-4",
-          students: [
-            "EIN2022"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
