--- a/docs/sala/bloco_1/laboratorio_de_fisica.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_fisica.mdx
@@ -42,6 +42,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Física 3",
+          size: 2,
+          teachers: [
+            "Vinicius de Souza Lamego"
+          ],
+          classroom: "Laboratório de Física",
+          students: [
+            "EIN2023"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
           subject: "Física III",
           size: 2,
           teachers: [
@@ -89,21 +102,7 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Física 3",
-          size: 2,
-          teachers: [
-            "Vinicius de Souza Lamego"
-          ],
-          classroom: "Laboratório de Física",
-          students: [
-            "EIN2023"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
