--- a/docs/sala/bloco_2/sala_11-2.mdx
+++ b/docs/sala/bloco_2/sala_11-2.mdx
@@ -40,7 +40,6 @@ export const data = {
           subject: "Instalações Elétricas",
           size: 4,
           teachers: [
-            "Alex Miyamoto Mussi",
             "Wylliam Salviano Gongora"
           ],
           classroom: "Sala 11-2",
@@ -66,19 +65,6 @@ export const data = {
             "EIN2023"
           ],
           time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Lingua Portuguesa 3",
-          size: 2,
-          teachers: [
-            "Kátia Cristiane Kobus Novaes"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "EIN2023"
-          ],
-          time: "08:20 - 09:10",
           color: ""
         },
         {
@@ -129,7 +115,21 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Lingua Portuguesa 3",
+          size: 2,
+          teachers: [
+            "Kátia Cristiane Kobus Novaes"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "EIN2023"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
