--- a/docs/sala/bloco_2/sala_13-2.mdx
+++ b/docs/sala/bloco_2/sala_13-2.mdx
@@ -149,8 +149,7 @@ export const data = {
           subject: "Matemática II",
           size: 2,
           teachers: [
-            "Elenice Josefa Kolancko Setti",
-            "Elizangela Mendes Pereira"
+            "Elenice Josefa Kolancko Setti"
           ],
           classroom: "Sala 13-2",
           students: [
