--- a/docs/sala/bloco_2/sala_14-2.mdx
+++ b/docs/sala/bloco_2/sala_14-2.mdx
@@ -40,8 +40,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Kátia Cristiane Kobus Novaes"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 14-2",
           students: [
@@ -142,8 +141,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Kátia Cristiane Kobus Novaes"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 14-2",
           students: [
@@ -205,7 +203,6 @@ export const data = {
           subject: "Educação Física II",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem",
             "Tiago Amaral Silva"
           ],
           classroom: "Sala 14-2",
@@ -239,19 +236,6 @@ export const data = {
             "COM2024"
           ],
           time: "11:05 - 11:55",
-          color: ""
-        },
-        {
-          subject: "Projeto Integrador II",
-          size: 1,
-          teachers: [
-            "Tiago Amaral Silva"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "COM2024"
-          ],
-          time: "13:10 - 14:00",
           color: ""
         }
       ]
