--- a/docs/turma/ago/ago2024.mdx
+++ b/docs/turma/ago/ago2024.mdx
@@ -123,8 +123,7 @@ export const data = {
           subject: "Matemática II",
           size: 2,
           teachers: [
-            "Elenice Josefa Kolancko Setti",
-            "Elizangela Mendes Pereira"
+            "Elenice Josefa Kolancko Setti"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -168,7 +167,6 @@ export const data = {
           subject: "Educação Física II",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem",
             "Tiago Amaral Silva"
           ],
           classroom: "Educação Física / Sala 1 B2",
