--- a/docs/turma/com/com2025.mdx
+++ b/docs/turma/com/com2025.mdx
@@ -14,8 +14,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Pedro Leites Junior"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -28,8 +27,7 @@ export const data = {
           subject: "Língua Estrangeira: Inglês",
           size: 1,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Yohana Diel Saheli"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -60,8 +58,7 @@ export const data = {
           subject: "Língua Estrangeira: Inglês",
           size: 1,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Yohana Diel Saheli"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -144,7 +141,6 @@ export const data = {
           subject: "Educação Física I",
           size: 1,
           teachers: [
-            "Kleber Augusto Michalichem",
             "Tiago Amaral Silva"
           ],
           classroom: "Sala 7-2",
@@ -158,8 +154,7 @@ export const data = {
           subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes",
-            "Pedro Leites Junior"
+            "Celina de Oliveira Barbosa Gomes"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -218,7 +213,7 @@ export const data = {
           teachers: [
             "Tiago Amaral Silva"
           ],
-          classroom: "Sala 7-2",
+          classroom: "Laboratório de Informatica C",
           students: [
             "COM2025"
           ],
@@ -260,7 +255,6 @@ export const data = {
           subject: "Educação Física I",
           size: 1,
           teachers: [
-            "Kleber Augusto Michalichem",
             "Tiago Amaral Silva"
           ],
           classroom: "Sala 7-2",
