--- a/docs/turma/iiw/iiw2025a.mdx
+++ b/docs/turma/iiw/iiw2025a.mdx
@@ -11,12 +11,12 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Biologia I",
+          subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Leandro Luiz Borges"
+            "Pedro Leites Junior"
           ],
-          classroom: "Laboratório de Biologia",
+          classroom: "Sala 9-2",
           students: [
             "IIW2025A"
           ],
@@ -97,7 +97,7 @@ export const data = {
           subject: "Matemática I",
           size: 2,
           teachers: [
-            "Jonathan Prass Souza"
+            "Elenice Josefa Kolancko Setti"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -164,12 +164,12 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Língua Portuguesa e Literatura I",
+          subject: "Biologia I",
           size: 2,
           teachers: [
-            "Pedro Leites Junior"
+            "Leandro Luiz Borges"
           ],
-          classroom: "Sala 9-2",
+          classroom: "Laboratório de Biologia",
           students: [
             "IIW2025A"
           ],
@@ -255,7 +255,7 @@ export const data = {
           subject: "Matemática I",
           size: 2,
           teachers: [
-            "Jonathan Prass Souza"
+            "Elenice Josefa Kolancko Setti"
           ],
           classroom: "Sala 9-2",
           students: [
