--- a/docs/professor/marcos_rogerio_oliveira.mdx
+++ b/docs/professor/marcos_rogerio_oliveira.mdx
@@ -19,39 +19,12 @@ export const data = {
           ],
           time: "15:05 - 15:55",
           color: ""
-        },
-        {
-          subject: "Tecnologia de carnes e derivados II",
-          size: 2,
-          teachers: [
-            "Marcos Rogério Oliveira"
-          ],
-          classroom: "Sala 15-2",
-          students: [
-            "TAL2024"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
         }
       ]
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Tecnologia de carnes e derivados II",
-          size: 1,
-          teachers: [
-            "Marcos Rogério Oliveira"
-          ],
-          classroom: "Sala 15-2",
-          students: [
-            "TAL2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
