--- a/docs/sala/bloco_2/sala_15-2.mdx
+++ b/docs/sala/bloco_2/sala_15-2.mdx
@@ -37,10 +37,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Métodos analíticos",
-          size: 2,
+          subject: "Processamento e pós-colheita de produtos vegetais",
+          size: 1,
           teachers: [
-            "Antonio Cesar Godoy"
+            "Beatriz de Souza Gonçalves Proença"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -50,16 +50,42 @@ export const data = {
           color: ""
         },
         {
-          subject: "Tecnologia de carnes e derivados II",
-          size: 2,
+          subject: "Processamento e pós-colheita de produtos vegetais",
+          size: 1,
           teachers: [
-            "Marcos Rogério Oliveira"
+            "Beatriz de Souza Gonçalves Proença"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "19:50 - 20:40",
+          color: ""
+        },
+        {
+          subject: "Tecnologia de massas e panifícios",
+          size: 1,
+          teachers: [
+            "Beatriz de Souza Gonçalves Proença"
           ],
           classroom: "Sala 15-2",
           students: [
             "TAL2024"
           ],
           time: "21:00 - 21:50",
+          color: ""
+        },
+        {
+          subject: "Tecnologia de massas e panifícios",
+          size: 1,
+          teachers: [
+            "Beatriz de Souza Gonçalves Proença"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "21:50 - 22:40",
           color: ""
         }
       ]
@@ -94,29 +120,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Tecnologia de carnes e derivados II",
-          size: 1,
+          subject: "Bromatologia dos Alimentos",
+          size: 4,
           teachers: [
-            "Marcos Rogério Oliveira"
+            "Beatriz de Souza Gonçalves Proença"
           ],
           classroom: "Sala 15-2",
           students: [
             "TAL2024"
           ],
           time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Tecnologia de massas e panifícios",
-          size: 3,
-          teachers: [
-            "Daniele de Almeida Paula"
-          ],
-          classroom: "Sala 15-2",
-          students: [
-            "TAL2024"
-          ],
-          time: "19:50 - 20:40",
           color: ""
         }
       ]
@@ -162,19 +175,6 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
-        },
-        {
-          subject: "Bromatologia dos Alimentos",
-          size: 4,
-          teachers: [
-            "Daniele de Almeida Paula"
-          ],
-          classroom: "Sala 15-2",
-          students: [
-            "TAL2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
         }
       ]
     },
@@ -198,7 +198,7 @@ export const data = {
           subject: "Análise Sensorial",
           size: 2,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Beatriz de Souza Gonçalves Proença"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -211,7 +211,7 @@ export const data = {
           subject: "Tecnologia de bebidas",
           size: 2,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Beatriz de Souza Gonçalves Proença"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -253,15 +253,41 @@ export const data = {
         },
         {
           subject: "Processamento e pós-colheita de produtos vegetais",
-          size: 4,
+          size: 1,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Beatriz de Souza Gonçalves Proença"
           ],
           classroom: "Sala 15-2",
           students: [
             "TAL2024"
           ],
           time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Processamento e pós-colheita de produtos vegetais",
+          size: 1,
+          teachers: [
+            "Beatriz de Souza Gonçalves Proença"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "19:50 - 20:40",
+          color: ""
+        },
+        {
+          subject: "Tecnologia de massas e panifícios",
+          size: 1,
+          teachers: [
+            "Beatriz de Souza Gonçalves Proença"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
