--- a/docs/sala/bloco_2/sala_9-2.mdx
+++ b/docs/sala/bloco_2/sala_9-2.mdx
@@ -110,7 +110,21 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Coletivo de Pofessores que Ensinam Matemática de Assis Chateaubriand",
+          size: 4,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "Reservas"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
