--- a/docs/turma/tal/tal2025.mdx
+++ b/docs/turma/tal/tal2025.mdx
@@ -11,29 +11,16 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Comunicação Técnica",
-          size: 2,
+          subject: "Fundamentos da Química",
+          size: 4,
           teachers: [
-            "Pedro Leites Junior"
+            "Antonio Cesar Godoy"
           ],
           classroom: "Sala 16-2",
           students: [
             "TAL2025"
           ],
           time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Máquinas, Equipamentos e Instalações Industriais",
-          size: 2,
-          teachers: [
-            "Jair Fajardo Junior"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "TAL2025"
-          ],
-          time: "21:00 - 21:50",
           color: ""
         }
       ]
@@ -73,16 +60,29 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Fundamentos da Química",
-          size: 4,
+          subject: "Comunicação Técnica",
+          size: 2,
           teachers: [
-            "Antonio Cesar Godoy"
+            "Pedro Leites Junior"
           ],
           classroom: "Sala 16-2",
           students: [
             "TAL2025"
           ],
           time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Máquinas, Equipamentos e Instalações Industriais",
+          size: 2,
+          teachers: [
+            "Beatriz de Souza Gonçalves Proença"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "TAL2025"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
