--- a/docs/professor/beatriz_de_souza_goncalves_proenca.mdx
+++ b/docs/professor/beatriz_de_souza_goncalves_proenca.mdx
@@ -1,21 +1,30 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Daniele de Almeida Paula",
+  title: "Beatriz de Souza Gonçalves Proença",
   base: "",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Tecnologia de massas e panifícios",
-          size: 3,
+          subject: "Processamento e pós-colheita de produtos vegetais",
+          size: 1,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Beatriz de Souza Gonçalves Proença"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Processamento e pós-colheita de produtos vegetais",
+          size: 1,
+          teachers: [
+            "Beatriz de Souza Gonçalves Proença"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -23,17 +32,43 @@ export const data = {
           ],
           time: "19:50 - 20:40",
           color: ""
+        },
+        {
+          subject: "Tecnologia de massas e panifícios",
+          size: 1,
+          teachers: [
+            "Beatriz de Souza Gonçalves Proença"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        },
+        {
+          subject: "Tecnologia de massas e panifícios",
+          size: 1,
+          teachers: [
+            "Beatriz de Souza Gonçalves Proença"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "21:50 - 22:40",
+          color: ""
         }
       ]
     },
     {
-      dayName: "Quarta-Feira",
+      dayName: "Terça-Feira",
       dayClasses: [
         {
           subject: "Bromatologia dos Alimentos",
           size: 4,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Beatriz de Souza Gonçalves Proença"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -45,13 +80,31 @@ export const data = {
       ]
     },
     {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Máquinas, Equipamentos e Instalações Industriais",
+          size: 2,
+          teachers: [
+            "Beatriz de Souza Gonçalves Proença"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "TAL2025"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
+    },
+    {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Análise Sensorial",
           size: 2,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Beatriz de Souza Gonçalves Proença"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -64,7 +117,7 @@ export const data = {
           subject: "Tecnologia de bebidas",
           size: 2,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Beatriz de Souza Gonçalves Proença"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -80,15 +133,41 @@ export const data = {
       dayClasses: [
         {
           subject: "Processamento e pós-colheita de produtos vegetais",
-          size: 4,
+          size: 1,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Beatriz de Souza Gonçalves Proença"
           ],
           classroom: "Sala 15-2",
           students: [
             "TAL2024"
           ],
           time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Processamento e pós-colheita de produtos vegetais",
+          size: 1,
+          teachers: [
+            "Beatriz de Souza Gonçalves Proença"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "19:50 - 20:40",
+          color: ""
+        },
+        {
+          subject: "Tecnologia de massas e panifícios",
+          size: 1,
+          teachers: [
+            "Beatriz de Souza Gonçalves Proença"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
@@ -154,7 +233,7 @@ export const data = {
   ]
 }
 
-# Daniele de Almeida Paula
+# Beatriz de Souza Gonçalves Proença
 
 <div>
   {
