--- a/docs/turma/outros/reservas.mdx
+++ b/docs/turma/outros/reservas.mdx
@@ -1,11 +1,11 @@
 ---
-slug: /sala/laboratorio_de_metrologia_b4
+slug: /turma/reservas
 ---
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Laboratório de Metrologia B4",
-  base: "Bloco 4",
+  title: "Reservas",
+  base: "Outros",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
@@ -13,47 +13,20 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Tecnologia dos Materiais",
-          size: 2,
-          teachers: [
-            "Fábio Fernandes da Silva"
-          ],
-          classroom: "Laboratório de Metrologia B4",
-          students: [
-            "EIN2025"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Metrologia",
-          size: 1,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Metrologia B4",
-          students: [
-            "EIN2024"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Metrologia",
-          size: 2,
+          subject: "Coletivo de Pofessores que Ensinam Matemática de Assis Chateaubriand",
+          size: 4,
           teachers: [
-            "Sérgio Takahashi"
+            "Elenice Josefa Kolancko Setti"
           ],
-          classroom: "Laboratório de Metrologia B4",
+          classroom: "Sala 9-2",
           students: [
-            "ELM2024"
+            "Reservas"
           ],
           time: "19:00 - 19:50",
           color: ""
@@ -129,7 +102,7 @@ export const data = {
   ]
 }
 
-# Laboratório de Metrologia B4
+# Reservas
 
 <div>
   {
