--- a/docs/turma/tal/tal2024.mdx
+++ b/docs/turma/tal/tal2024.mdx
@@ -11,10 +11,10 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Métodos analíticos",
-          size: 2,
+          subject: "Processamento e pós-colheita de produtos vegetais",
+          size: 1,
           teachers: [
-            "Antonio Cesar Godoy"
+            "Beatriz de Souza Gonçalves Proença"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -24,16 +24,42 @@ export const data = {
           color: ""
         },
         {
-          subject: "Tecnologia de carnes e derivados II",
-          size: 2,
+          subject: "Processamento e pós-colheita de produtos vegetais",
+          size: 1,
           teachers: [
-            "Marcos Rogério Oliveira"
+            "Beatriz de Souza Gonçalves Proença"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "19:50 - 20:40",
+          color: ""
+        },
+        {
+          subject: "Tecnologia de massas e panifícios",
+          size: 1,
+          teachers: [
+            "Beatriz de Souza Gonçalves Proença"
           ],
           classroom: "Sala 15-2",
           students: [
             "TAL2024"
           ],
           time: "21:00 - 21:50",
+          color: ""
+        },
+        {
+          subject: "Tecnologia de massas e panifícios",
+          size: 1,
+          teachers: [
+            "Beatriz de Souza Gonçalves Proença"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "21:50 - 22:40",
           color: ""
         }
       ]
@@ -42,50 +68,23 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Tecnologia de carnes e derivados II",
-          size: 1,
+          subject: "Bromatologia dos Alimentos",
+          size: 4,
           teachers: [
-            "Marcos Rogério Oliveira"
+            "Beatriz de Souza Gonçalves Proença"
           ],
           classroom: "Sala 15-2",
           students: [
             "TAL2024"
           ],
           time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Tecnologia de massas e panifícios",
-          size: 3,
-          teachers: [
-            "Daniele de Almeida Paula"
-          ],
-          classroom: "Sala 15-2",
-          students: [
-            "TAL2024"
-          ],
-          time: "19:50 - 20:40",
           color: ""
         }
       ]
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Bromatologia dos Alimentos",
-          size: 4,
-          teachers: [
-            "Daniele de Almeida Paula"
-          ],
-          classroom: "Sala 15-2",
-          students: [
-            "TAL2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -94,7 +93,7 @@ export const data = {
           subject: "Análise Sensorial",
           size: 2,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Beatriz de Souza Gonçalves Proença"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -107,7 +106,7 @@ export const data = {
           subject: "Tecnologia de bebidas",
           size: 2,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Beatriz de Souza Gonçalves Proença"
           ],
           classroom: "Sala 15-2",
           students: [
@@ -123,15 +122,41 @@ export const data = {
       dayClasses: [
         {
           subject: "Processamento e pós-colheita de produtos vegetais",
-          size: 4,
+          size: 1,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Beatriz de Souza Gonçalves Proença"
           ],
           classroom: "Sala 15-2",
           students: [
             "TAL2024"
           ],
           time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Processamento e pós-colheita de produtos vegetais",
+          size: 1,
+          teachers: [
+            "Beatriz de Souza Gonçalves Proença"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "19:50 - 20:40",
+          color: ""
+        },
+        {
+          subject: "Tecnologia de massas e panifícios",
+          size: 1,
+          teachers: [
+            "Beatriz de Souza Gonçalves Proença"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
